--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  releases: write
+
 jobs:
   build:
     if: "!startsWith(github.ref, 'refs/tags/')"
