--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -50,7 +50,7 @@ jobs:
 
   linux-build:
     name: Linux Build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
       - name: Install Swift
