--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -53,6 +53,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+      - name: Install dependencies
+        run: sudo apt-get install -y libcurl4-openssl-dev
       - name: Install Swift
         uses: lapfelix/install-swift@main
         with:
